# Polynome

./: CMakeLists.txt  Polynome.h
tests/: CMakeLists.txt  tests_polynome.cpp
